<?xml version="1.0"?>
<package format="2">
  <name>my_turtle_pkg</name>
  <version>0.0.0</version>
  <description>The my_turtle_pkg package</description>

  <maintainer email="kreta@todo.todo">kreta</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>turtlesim</depend>
  <depend>tf</depend>

</package>
